<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- Allow the users to view the location on a map -->
    <Preference android:title="@string/pref_location_view" >
        <intent android:action="android.intent.action.VIEW"
            android:scheme="geo"
            android:name="android.intent.category.DEFAULT"
            android:data="@string/pref_location_key"/>
    </Preference>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_metric"
            android:entryValues="@array/pref_units_values"
            android:entries="@array/pref_units_options" />

</PreferenceScreen>
